feat: 정비 진행 상황 추가, 삭제 기능 구현
이제 관리자 페이지 예약 상세에서 step 추가 및 상제가 가능합니다.
필요에 따라 API도 약간의 수정이 들어갔습니다.